--- a/Add_Income.html
+++ b/Add_Income.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Income - Expense Tracker</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Add_Income.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -44,6 +44,6 @@
         </form>
     </div>
 
-    <script src="script.js"></script>
+    <script src="Add_Income.js"></script>
 </body>
 </html>
