--- a/Add_Expense.html
+++ b/Add_Expense.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Expense</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Add_Expense.css">
 </head>
 <body>
     <div class="container">
@@ -48,6 +48,6 @@
         </form>
     </div>
 
-    <script src="script.js"></script>
+    <script src="Add_Expense.js"></script>
 </body>
 </html>
