--- a/Registration.html
+++ b/Registration.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Expense Tracker</title>
-    <link rel="stylesheet" href="reg-styles.css">
+    <link rel="stylesheet" href="Registration.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -39,6 +39,6 @@
         </form>
     </div>
 
-    <script src="reg-script.js"></script>
+    <script src="Registration.js"></script>
 </body>
 </html>
