--- a/Transaction.html
+++ b/Transaction.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transactions - Expense Tracker</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Transaction.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -46,6 +46,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="Transaction.js"></script>
 </body>
 </html>
