Updated Validation path loc and fix UI issues

--- a/Add_Expense.html
+++ b/Add_Expense.html
@@ -4,10 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Expense</title>
-    <link rel="stylesheet" href="Add_Expense.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <div class="container">
+
+<div class="container">
+        <header>
+            <h1>Add Expense</h1>
+            <a href="Dashboard.html" class="back-btn">Back to Dashboard</a>
+            
+        </header>
+
+        <form id="add-expense-form" class="form">
+            <div class="form-group">
+                <label for="expense-name">Expense Name:</label>
+                <input type="text" id="expense-name" name="expense-name" placeholder="e.g. Groceries" required>
+            </div>
+            <div class="form-group">
+                <label for="amount">Amount (₹):</label>
+                <input type="number" id="amount" name="amount" placeholder="Amount" required>
+            </div>
+            <div class="form-group">
+                <label for="expense-date">Date:</label>
+                <input type="date" id="date" name="date" required>
+            </div>
+            <div class="form-group">
+                <label for="expense-category">Category:</label>
+                <select id="expense-category" name="expense-category" required>
+                    <option value="food">Food</option>
+                    <option value="entertainment">Entertainment</option>
+                    <option value="bills">Bills</option>
+                    <option value="transportation">Transportation</option>
+                    <option value="others">Others</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>Expense Type:</label>
+                <select id="type" name="type" required>
+                    <option value="food">Needs</option>
+                    <option value="entertainment">Wants</option>
+                    <option value="bills">Investments</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="other-details">Comments:</label>
+                <textarea id="other-details" name="other-details" placeholder="Additional notes (optional)"></textarea>
+            </div>
+
+            <button type="submit" class="submit-btn">Add Expense</button>
+        </form>
+    </div>
+
+    <!-- <div class="container">
         <h1>Add New Expense</h1>
         <form id="expense-form">
             <div class="form-group">
@@ -46,7 +94,7 @@
             </div>
             <button type="submit" class="submit-btn">Add Expense</button>
         </form>
-    </div>
+    </div> -->
 
     <script src="Add_Expense.js"></script>
 </body>
