--- a/Dashboard.html
+++ b/Dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Expense Tracker</title>
-    <link rel="stylesheet" href="Dashboard.css">
+    <link rel="stylesheet" href="../css/Dashboard.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -13,7 +13,7 @@
             <h1>Expense Tracker Dashboard</h1>
             <div class="header-buttons">
                 <button class="add-btn">Add Expense</button>
-                <button class="add-btn add-income-btn">Add Income</button>
+                <button class="add-btn">Add Income</button>
             </div>
         </header>
 
