--- a/Transaction.html
+++ b/Transaction.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transactions - Expense Tracker</title>
-    <link rel="stylesheet" href="Transaction.css">
+    <link rel="stylesheet" href="../css/Transaction.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <header>
             <h1>Transactions List</h1>
+            <a href="Dashboard.html" class="back-btn">Back to Dashboard</a>
             <button class="add-btn">Add New Expense</button>
+            <button class="add-btn">Add New Income</button>
         </header>
 
         <div class="filters">
