--- a/Add_Income.html
+++ b/Add_Income.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Income - Expense Tracker</title>
-    <link rel="stylesheet" href="Add_Income.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <header>
             <h1>Add Income</h1>
-            <a href="dashboard.html" class="back-btn">Back to Dashboard</a>
+            <a href="Dashboard.html" class="back-btn">Back to Dashboard</a>
         </header>
 
         <form id="add-income-form" class="form">
@@ -21,7 +21,7 @@
             </div>
             
             <div class="form-group">
-                <label for="income-amount">Amount</label>
+                <label for="amount">Amount</label>
                 <input type="number" id="income-amount" name="income-amount" required placeholder="Enter Amount" min="0">
             </div>
 
@@ -40,7 +40,7 @@
                 </select>
             </div>
 
-            <button type="submit" class="add-btn">Add Income</button>
+            <button type="submit" class="submit-btn">Add Income</button>
         </form>
     </div>
 
