--- a/Registration.html
+++ b/Registration.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Expense Tracker</title>
-    <link rel="stylesheet" href="Registration.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -35,7 +35,7 @@
                 <input type="password" id="confirm-password" name="confirm-password" required placeholder="Confirm Password">
             </div>
 
-            <button type="submit" class="save-btn">Register</button>
+            <button type="submit" class="submit-btn">Register</button>
         </form>
     </div>
 
