--- a/login.html
+++ b/login.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Expense Tracker</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <header>
             <h1>Login to Your Account</h1>
-            <a href="register.html" class="back-btn">Don't have an account? Register</a>
+            <a href="Registration.html" class="back-btn">Don't have an account? Register</a>
         </header>
 
         <form id="login-form" class="form">
@@ -25,7 +25,7 @@
                 <input type="password" id="password" name="password" required placeholder="Your Password">
             </div>
 
-            <button type="submit" class="save-btn">Login</button>
+            <button type="submit" class="submit-btn">Login</button>
         </form>
     </div>
 
