Updating repo name

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -12,8 +12,9 @@
         <header>
             <h1>Expense Tracker Dashboard</h1>
             <div class="header-buttons">
-                <button class="add-btn">Add Expense</button>
-                <button class="add-btn">Add Income</button>
+                <button class="add-btn" onclick="location.href='Add_Expense.html'">Add Expense</button>
+				<button class="add-btn" onclick="location.href='Add_Income.html'">Add Income</button>
+                
             </div>
         </header>
 
@@ -49,6 +50,6 @@
         </div>
     </div>
 
-    <script src="Dashboard.js"></script>
+    <script src="../js/Dashboard.js"></script>
 </body>
 </html>
