File loc change

--- a/Add_Income.html
+++ b/Add_Income.html
@@ -22,7 +22,7 @@
             
             <div class="form-group">
                 <label for="amount">Amount</label>
-                <input type="number" id="income-amount" name="income-amount" required placeholder="Enter Amount" min="0">
+                <input type="number" id="income-amount" name="income-amount" required placeholder="Enter Amount" step="0.01">
             </div>
 
             <div class="form-group">
@@ -44,6 +44,6 @@
         </form>
     </div>
 
-    <script src="Add_Income.js"></script>
+    <script src="../js/Add_Income.js"></script>
 </body>
 </html>
