--- a/charts.html
+++ b/charts.html
@@ -62,6 +62,6 @@
         </div>
     </div>
 
-    <script src="charts.js"></script> <!-- External JS file for handling the charts -->
+    <script src="../js/charts.js"></script> <!-- External JS file for handling the charts -->
 </body>
 </html>
