--- a/Add_Expense.html
+++ b/Add_Expense.html
@@ -21,12 +21,12 @@
                 <input type="text" id="expense-name" name="expense-name" placeholder="e.g. Groceries" required>
             </div>
             <div class="form-group">
-                <label for="amount">Amount (₹):</label>
-                <input type="number" id="amount" name="amount" placeholder="Amount" required>
+                <label for="expense-amount">Amount (₹):</label>
+                <input type="number" id="expense-amount" name="expense-amount" placeholder="Amount" required step="0.01">
             </div>
             <div class="form-group">
                 <label for="expense-date">Date:</label>
-                <input type="date" id="date" name="date" required>
+                <input type="date" id="expense-date" name="expense-date" required>
             </div>
             <div class="form-group">
                 <label for="expense-category">Category:</label>
@@ -96,6 +96,6 @@
         </form>
     </div> -->
 
-    <script src="Add_Expense.js"></script>
+    <script src="../js/Add_Expense.js"></script>
 </body>
 </html>
