--- a/Transaction.html
+++ b/Transaction.html
@@ -48,6 +48,6 @@
         </div>
     </div>
 
-    <script src="Transaction.js"></script>
+    <script src="../js/Transaction.js"></script>
 </body>
 </html>
