--- a/Transaction.html
+++ b/Transaction.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transactions - Expense Tracker</title>
-    <link rel="stylesheet" href="../css/Transaction.css">
+    <link rel="stylesheet" href="css/Transaction.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
