.js path changes

--- a/Add_Expense.html
+++ b/Add_Expense.html
@@ -96,6 +96,6 @@
         </form>
     </div> -->
 
-    <script src="../js/Add_Expense.js"></script>
+    <script src="js/Add_Expense.js"></script>
 </body>
 </html>
