--- a/Add_Income.html
+++ b/Add_Income.html
@@ -44,6 +44,6 @@
         </form>
     </div>
 
-    <script src="../js/Add_Income.js"></script>
+    <script src="js/Add_Income.js"></script>
 </body>
 </html>
