--- a/Dashboard.html
+++ b/Dashboard.html
@@ -50,6 +50,6 @@
         </div>
     </div>
 
-    <script src="../js/Dashboard.js"></script>
+    <script src="js/Dashboard.js"></script>
 </body>
 </html>
