--- a/Registration.html
+++ b/Registration.html
@@ -39,6 +39,6 @@
         </form>
     </div>
 
-    <script src="Registration.js"></script>
+    <script src="js/Registration.js"></script>
 </body>
 </html>
